# udp-security-cam-system

./: .gitignore  CMakeLists.txt  README.md
config/: networkConfig.ini
not-used/: opencvClient.cpp
src/: cameraSocket.cpp  cameraSocket.hpp  clientAndServer.cpp  main.cpp  opencvExample.cpp  serverSocket.cpp  serverSocket.hpp  tcpClientAndServer.cpp
